--- a/output/example_IBERT_MGT_16G_25G.ltx
+++ b/output/example_IBERT_MGT_16G_25G.ltx
@@ -158,306 +158,230 @@
                                 "direction": "OUT",
                                 "isVector": true,
                                 "leftIndex": 0,
-                                "rightIndex": 0,
+                                "rightIndex": 31,
                                 "portIndex": 0,
                                 "nets": [
                                     {
                                         "name": "heater_adjust",
-                                        "isBus": false
+                                        "isBus": true,
+                                        "subnets": [
+                                            {
+                                                "name": "heater_adjust[31]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[30]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[29]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[28]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[27]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[26]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[25]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[24]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[23]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[22]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[21]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[20]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[19]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[18]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[17]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[16]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[15]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[14]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[13]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[12]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[11]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[10]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[9]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[8]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[7]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[6]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[5]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[4]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[3]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[2]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[1]"
+                                            },
+                                            {
+                                                "name": "heater_adjust[0]"
+                                            }
+                                        ]
                                     }
                                 ]
                             },
                             {
-                                "name": "probe_out0",
+                                "name": "probe_out1",
                                 "id": 2,
                                 "type": "DATA",
                                 "direction": "OUT",
                                 "isVector": true,
-                                "leftIndex": 1,
-                                "rightIndex": 31,
-                                "portIndex": 0,
-                                "nets": [
-                                    {
-                                        "name": "vio_inst/probe_out0[31]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[30]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[29]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[28]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[27]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[26]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[25]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[24]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[23]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[22]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[21]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[20]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[19]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[18]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[17]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[16]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[15]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[14]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[13]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[12]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[11]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[10]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[9]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[8]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[7]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[6]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[5]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[4]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[3]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[2]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out0[1]",
-                                        "isBus": false
-                                    }
-                                ]
-                            },
-                            {
-                                "name": "probe_out1",
-                                "id": 3,
-                                "type": "DATA",
-                                "direction": "OUT",
-                                "isVector": true,
                                 "leftIndex": 0,
-                                "rightIndex": 0,
+                                "rightIndex": 31,
                                 "portIndex": 1,
                                 "nets": [
                                     {
                                         "name": "heater_read_addr",
-                                        "isBus": false
-                                    }
-                                ]
-                            },
-                            {
-                                "name": "probe_out1",
-                                "id": 4,
-                                "type": "DATA",
-                                "direction": "OUT",
-                                "isVector": true,
-                                "leftIndex": 1,
-                                "rightIndex": 31,
-                                "portIndex": 1,
-                                "nets": [
-                                    {
-                                        "name": "vio_inst/probe_out1[31]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[30]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[29]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[28]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[27]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[26]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[25]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[24]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[23]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[22]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[21]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[20]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[19]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[18]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[17]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[16]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[15]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[14]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[13]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[12]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[11]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[10]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[9]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[8]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[7]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[6]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[5]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[4]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[3]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[2]",
-                                        "isBus": false
-                                    },
-                                    {
-                                        "name": "vio_inst/probe_out1[1]",
-                                        "isBus": false
+                                        "isBus": true,
+                                        "subnets": [
+                                            {
+                                                "name": "heater_read_addr[0]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[1]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[2]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[3]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[4]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[5]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[6]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[7]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[8]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[9]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[10]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[11]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[12]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[13]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[14]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[15]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[16]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[17]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[18]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[19]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[20]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[21]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[22]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[23]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[24]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[25]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[26]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[27]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[28]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[29]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[30]"
+                                            },
+                                            {
+                                                "name": "heater_read_addr[31]"
+                                            }
+                                        ]
                                     }
                                 ]
                             },
                             {
                                 "name": "probe_out2",
-                                "id": 5,
+                                "id": 3,
                                 "type": "DATA",
                                 "direction": "OUT",
                                 "isVector": false,
@@ -473,7 +397,7 @@
                             },
                             {
                                 "name": "probe_out3",
-                                "id": 6,
+                                "id": 4,
                                 "type": "DATA",
                                 "direction": "OUT",
                                 "isVector": false,
